samples/_failures_safe/1761425533_0e0580_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17445e1d.c: In function ‘write_compressed_output’:
./samples/SAFE/__tmp_17445e1d.c:193: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_17445e1d.c:192:5: error: expected declaration or statement at end of input
  192 |     while
      |     ^~~~~
